<resources>
    <string name="app_name">MiPokedex_CuevasJorge</string>
    <string name="pokemonTitle">Pikachu</string>
    <string name="pokemonNumber">#025</string>
    <string name="pokemonType">Eléctrico</string>
    <string name="pokemonWeightLabel">Peso</string>
    <string name="pokemonWeightValue">6,0kg</string>
    <string name="pokemonHeightLabel">Altura</string>
    <string name="pokemonHeightValue">0,4m</string>
    <string name="pokemonAbilityLabel">Habilidad</string>
    <string name="pokemonAbilityValue">Elec. Estática</string>
    <string name="descripcionPokemon">Cuando se enfada, este pokémon descarga la energía que almacena en el interior de las bolsas de las mejillas.</string>
    <string name="pokemonPrevTitle">Arbok N. 0024</string>
    <string name="pokemonNextTitle">Raichu N. 0026</string>
</resources>