<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_yellow"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/pokemonTitle"
        style="@style/PokemonTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemonNumber"
        style="@style/PokemonNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPokemon" />

    <ImageView
        android:id="@+id/imgPokebola"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokebola" />

    <ImageView
        android:id="@+id/imgFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imgPokebola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="135dp"
        android:background="@drawable/bd_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumero"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_tipo"
            android:padding="8dp"
            android:text="@string/pokemonType"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvPesoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/pokemonWeightLabel"
            style="@style/PokemonLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAlturaLabel" />

        <TextView
            android:id="@+id/tvPesoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pokemonWeightValue"
            style="@style/PokemonValue"
            app:layout_constraintStart_toEndOf="@+id/tvPesoLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvAlturaValue" />

        <TextView
            android:id="@+id/tvAlturaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/pokemonHeightLabel"
            style="@style/PokemonLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTipo" />

        <TextView
            android:id="@+id/tvAlturaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/pokemonHeightValue"
            style="@style/PokemonValue"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAlturaLabel"
            app:layout_constraintStart_toEndOf="@id/tvAlturaLabel" />

        <TextView
            android:id="@+id/tvHabilidadLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/pokemonAbilityLabel"
            style="@style/PokemonLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvAlturaValue"
            app:layout_constraintTop_toBottomOf="@+id/tvTipo" />

        <TextView
            android:id="@+id/tvHabilidadValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/pokemonAbilityValue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPesoValue"
            app:layout_constraintTop_toBottomOf="@+id/tvHabilidadLabel" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:padding="30dp"
            android:text="@string/descripcionPokemon"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHabilidadValue" />

        <ImageView
            android:id="@+id/imgPokePrev"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgPokeNext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"
            app:srcCompat="@drawable/arbok" />


        <TextView
            android:id="@+id/tvPokePrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemonPrevTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvPokeNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPokeNext"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imgPokeNext"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.774"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"
            app:srcCompat="@drawable/pokemon2" />

        <TextView
            android:id="@+id/tvPokeNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemonNextTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPokeNext"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_circle"
            android:rotation="180"
            android:src="@android:drawable/ic_media_previous"
            android:tint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPokeNext"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />

        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_circle"
            android:src="@android:drawable/ic_media_previous"
            android:tint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/imgPokeNext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgPikachu"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumero"
        app:srcCompat="@drawable/pikachu" />



</androidx.constraintlayout.widget.ConstraintLayout>



